--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,17 @@
 body {
     margin: 0;
+    background: #c7e9fa;
+    color: black;
 }
 
 nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: linear-gradient(35deg, #115093 50%, black 90%);
+    background: #006687;
     color: white;
     padding: 10px;
-
+    border-bottom: 1px solid #000;
 }
 
 nav > h1 {
@@ -17,11 +19,22 @@ nav > h1 {
     margin-bottom: 5px;
 }
 
+nav > div {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+* {
+    /* border: 2px solid red; */
+}
+
 nav button {
     background: transparent;
     color: white;
     border: none;
     border-bottom: 2px solid transparent;
+    border-bottom: 1px solid white;
 }
 
 nav button:hover {
@@ -51,6 +64,7 @@ main {
 
 .mainHeader > div > img {
     width: 100%;
+    height: 100%;
     position: absolute;
 }
 
@@ -129,4 +143,69 @@ main {
 
 .mainBody {
     clear: both;
+    background: #876996;
+    color: #fdecff;
+    padding: 10px;
+    border-radius: 6px;
+}
+
+ol {
+    padding-left: 20px;
+}
+
+ul {
+    overflow: auto;
+    height: 0;
+    transition: all 1s;
+    padding: 5px;
+    opacity: 0;
+}
+
+li > h4 {
+    margin: 0;
+    padding: 0;
+    text-decoration: underline;
+    font-weight: 100;
+}
+
+li:active>ul, li:hover>ul {
+    height: 18vh;
+    opacity: 1;
+    background: #ffffff;
+    color: #181c1e;
+    padding: 10px 26px;
+    margin: 10px 10px 20px auto;
+    border-radius: 10px;
+    font-size: 0.8rem;
+}
+
+@media screen and (orientation:landscape) {
+
+    nav {
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    nav > div {
+        width: 60%;
+    }
+
+    nav button {
+        font-size: 1.1rem;
+    }
+
+    nav button {
+        font-size: 1.2rem;
+    }
+
+    .mainHeader {
+        min-height: 150px;
+        font-size: 1.2rem;
+    }
+
+    .mainHeader > div {
+        width: 250px;
+        height: 160px;
+    }
 }
