--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+/* * {
+    transition: all 1s;
+} */
+
 body {
     margin: 0;
     background: #c7e9fa;
@@ -25,10 +29,6 @@ nav > div {
     width: 100%;
 }
 
-* {
-    /* border: 2px solid red; */
-}
-
 nav button {
     background: transparent;
     color: white;
@@ -45,12 +45,40 @@ nav button:hover {
     transform-origin: left;
 }
 
+.sdwan {
+    background: #f9dedc;
+    color: #410e0b;
+    color: black;
+    margin: 0;
+    width: 95%;
+    margin-left: 0;
+    opacity: 0.85;
+    height: 0;
+    overflow: hidden;
+}
+
+.showInfo {
+    height: fit-content;
+    padding: 15px 5%;
+    animation: showInfo 1s;
+}
+
+@keyframes showInfo {
+    0% {
+        height: 0;
+    }
+    100% {
+        height: 5vh;
+    }
+}
+
 main {
-    margin: 5%;
+    margin: 0 5% 5%;
 }
 
 .mainHeader {
     min-height: 150px;
+    margin-top: 20px;
 }
 
 .mainHeader > div {
@@ -147,6 +175,7 @@ main {
     color: #fdecff;
     padding: 10px;
     border-radius: 6px;
+    margin-top: 30px;
 }
 
 ol {
@@ -171,8 +200,8 @@ li > h4 {
 li:active>ul, li:hover>ul {
     height: 18vh;
     opacity: 1;
-    background: #ffffff;
-    color: #181c1e;
+    background: #f9dedc;
+    color: #410e0b;
     padding: 10px 26px;
     margin: 10px 10px 20px auto;
     border-radius: 10px;
