--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ nav button:hover {
 }
 
 .sdwan > p, .cyberSec > p, .contact > p {
-    width: 95%;
+    width: 90%;
     margin: 15px auto;
 }
 
@@ -245,6 +245,7 @@ li:active>ul, li:hover>ul {
         flex-direction: row;
         align-items: center;
         justify-content: space-around;
+        align-content: center;
     }
 
     nav > div {
