--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,3 +1,6 @@
+
+
+
 .container {
     height: 50vh;
     margin: 0 auto;
@@ -130,17 +133,12 @@ main {
     margin: 0 5% 5%;
 }
 
-.mainHeader {
-    min-height: 150px;
-    margin-top: 20px;
-}
-
 .mainHeader > div {
-    width: 150px;
+    width: 100%;
     float: left;
     margin-right: 20px;
     position: relative;
-    height: 100px;
+    height: 60vh;
     overflow: hidden;
 }
 
@@ -223,6 +221,26 @@ main {
     }
 }
 
+.mainHeader > div > p {
+    color: white;
+    font-size: 2.4rem;
+    font-family: fantasy;
+    width: fit-content;
+    margin: 15vh auto;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 10vh;
+    margin: auto;
+}
+
+.darkscreen {
+    width: 100%;
+    height: 50vh;
+    background: #00000070;
+    position: absolute;
+}
+
 .mainBody {
     clear: both;
     background: #876996;
@@ -283,13 +301,8 @@ li:active>ul, li:hover>ul {
         font-size: 1.2rem;
     }
 
-    .mainHeader {
-        min-height: 150px;
-        font-size: 1.2rem;
-    }
-
     .mainHeader > div {
-        width: 250px;
-        height: 160px;
+        width: 100%;
+        height: 50vh;
     }
 }
