--- a/assets/css/contactUs.css
+++ b/assets/css/contactUs.css
@@ -3,3 +3,37 @@ main {
     margin: 0 auto;
     font-size: 1.8rem;
 }
+
+.contactForm {
+    border: 1px solid #000;
+    padding: 10px;
+    border-radius: 8px;
+    width: 95%;
+    margin: 5vh auto;
+    display: grid;
+    grid-template-columns: repeat(10, 10%);
+    grid-template-rows: repeat(10, 6vh);
+}
+
+.contactForm h4 {
+    grid-area: 1/1/2/11;
+    text-align: center;
+}
+
+form * {
+    border: 1px solid red;
+}
+label {
+    width: 100%;
+}
+
+input {
+    width: 100%;
+    background: lightgray;
+    border: 1px solid #000;
+    border-radius: 8px;
+}
+
+.col1 {
+    grid-area: 2/1/8/4;
+}
