--- a/assets/css/contactUs.css
+++ b/assets/css/contactUs.css
@@ -5,35 +5,58 @@ main {
 }
 
 .contactForm {
-    border: 1px solid #000;
     padding: 10px;
     border-radius: 8px;
     width: 95%;
     margin: 5vh auto;
-    display: grid;
-    grid-template-columns: repeat(10, 10%);
-    grid-template-rows: repeat(10, 6vh);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .contactForm h4 {
-    grid-area: 1/1/2/11;
     text-align: center;
+    width: 100%;
 }
 
-form * {
-    border: 1px solid red;
+form > div {
+    width: 45%;
 }
+
 label {
     width: 100%;
 }
 
 input {
     width: 100%;
-    background: lightgray;
+    background: rgb(228, 227, 227);
+    border: 1px solid #000;
+    border-radius: 3px;
+    height: 2.5rem;
+    margin-bottom: 2vh;
+    font-size: 1.2rem;
+    padding: 5px;
+}
+
+.textarea {
+    width: 100%;
+    margin: 0 auto;
+}
+
+form textarea {
+    width: 100%;
+    margin: 0 auto 2vh;
+    height: 10vh;
     border: 1px solid #000;
     border-radius: 8px;
 }
 
-.col1 {
-    grid-area: 2/1/8/4;
+input[type="submit"] {
+        width: fit-content;
+        padding: 0 20px;
+        background: #006687;
+        color: white;
+        font-size: 1.7rem;
+        font-weight: 900;
+        border-radius: 8px;
 }
