--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,15 +1,6 @@
-
-
-
-.container {
-    height: 50vh;
-    margin: 0 auto;
-    background: white;
-    padding: 5px;
-    border-radius: 8px;
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('../images/network3.jpeg');
+:root {
+    --height1: 10vh;
+    --height2: 10vh;
 }
 
 body {
@@ -29,30 +20,23 @@ body {
     font-size: 2.4rem;
     font-family: fantasy;
     width: fit-content;
-    margin: 15vh auto;
-}
-
-.slideUpDiv {
-    width: 60%;
     margin: 0 auto;
-    overflow: hidden;
 }
 
-.slideUp {
-    display: block;
+#aboutDiv2 {
     font-size: 1.7rem;
     color: gray;
     font-family: serif;
     width: fit-content;
     margin: 5vh auto;
-    animation: slideUp .5s;
+    animation: aboutDiv2 .5s;
 }
 
 .hide {
     display: none;
 }
 
-@keyframes slideUp {
+@keyframes aboutDiv2 {
     0% {
         opacity: 0;
     }
@@ -80,20 +64,16 @@ body {
     border: none;
 }
 
-.notActive {
+.aboutNav button {
     color: gray;
     font-family: fantasy;
     border-bottom: 4px solid transparent;
     font-size: 1.5rem;
 }
 
-.active, .notActive:hover {
+.aboutNav button:focus, .aboutNav button:hover {
     color: #000;
-    font-family: fantasy;
-    border: unset;
     border-bottom: 4px solid red;
-    font-size: 1.5rem;
-    transition: all 1s;
 }
 
 
@@ -127,18 +107,84 @@ nav button {
     background: transparent;
     color: white;
     border: none;
+    border-bottom: 2px solid transparent;
+    border-bottom: 1px solid white;
+}
+
+nav button:hover {
+    cursor: pointer;
+    transition: border 1s;
+    transform: border;
+    transform-origin: left;
+}
+
+.sdwan, .cyberSec, .contact {
+    background: #f9dedc;
+    color: #410e0b;
+    color: black;
+    margin: 0;
+    width: 100%;
+    /* padding: 10px 5%; */
+    opacity: 0;
+    position: absolute;
+}
+
+.sdwan > p, .cyberSec > p, .contact > p {
+    width: 90%;
+    margin: 15px auto;
+}
+
+.showInfo {
+    position: unset;
+    opacity: 0.85;
+    animation: showInfo .5s ease-in-out;
+    overflow: hidden;
+}
+
+@keyframes showInfo {
+    0% {
+        height: 0;
+    }
+    100% {
+        height: var(--height1);
+    }
+}
+
+.hideInfo {
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    animation: hideInfo .5s ease-in-out;
+}
+
+@keyframes hideInfo {
+    0% {
+        position: unset;
+        opacity: .85;
+        height: var(--height2);
+    }
+    100% {
+        position: unset;
+        opacity: .85;
+        height: 0;
+    }
 }
 
 main {
     margin: 0 5% 5%;
 }
 
+.mainHeader {
+    min-height: 150px;
+    margin-top: 20px;
+}
+
 .mainHeader > div {
-    width: 100%;
+    width: 150px;
     float: left;
     margin-right: 20px;
     position: relative;
-    height: 60vh;
+    height: 100px;
     overflow: hidden;
 }
 
@@ -221,26 +267,6 @@ main {
     }
 }
 
-.mainHeader > div > p {
-    color: white;
-    font-size: 2.4rem;
-    font-family: fantasy;
-    width: fit-content;
-    margin: 15vh auto;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 10vh;
-    margin: auto;
-}
-
-.darkscreen {
-    width: 100%;
-    height: 50vh;
-    background: #00000070;
-    position: absolute;
-}
-
 .mainBody {
     clear: both;
     background: #876996;
@@ -301,8 +327,13 @@ li:active>ul, li:hover>ul {
         font-size: 1.2rem;
     }
 
+    .mainHeader {
+        min-height: 150px;
+        font-size: 1.2rem;
+    }
+
     .mainHeader > div {
-        width: 100%;
-        height: 50vh;
+        width: 250px;
+        height: 160px;
     }
 }
