modified the js script to add scrolling instead to the home page. Added options to the products of interest in Contact Us [1h]

--- a/assets/css/contactUs.css
+++ b/assets/css/contactUs.css
@@ -60,3 +60,9 @@ input[type="submit"] {
         font-weight: 900;
         border-radius: 8px;
 }
+
+select {
+    font-size: 1.5rem;
+    height: 55px;
+    padding: 5px;
+}
